--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Book_Market</string>
     <string name="quen_mk">Quên mật khẩu</string>
+    <string name="close">close</string>
+    <string name="open">open</string>
 </resources>
