--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="open">open</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="vanBanGia">Quyển sách được viết vào thời niên thiếu của nhà văn A trước khi cuộc chiến Z xảy ra nội dung hay giúp độc giả hồi tưởng lại quá khứ đầy bi thương mà cũng hào hùng</string>
 </resources>
